--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -7,15 +7,13 @@
 
 .Nav {
   background-color: #fff;
-  margin: 15px;
-  min-height: 10vh;
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+  min-height: 5vh;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  color: #352f2f;
-  text-decoration: none;
   list-style: none;
   border-bottom: 2px solid #9c9c9c;
 }
@@ -23,5 +21,11 @@
 .LinkNav {
   padding: 20px;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: normal;
+  color: rgb(32, 6, 148);
+}
+
+.ActiveLink {
+  color: red;
+  font-weight: bold;
 }
